--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "express": "^4.21.2",
     "iteg_management_system": "file:",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0"
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.10.1",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
