--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Anees khan",
   "license": "ISC",
   "dependencies": {
+    "backend": "^0.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -21,8 +22,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9"
-
-    
-  }
-  
+  },
+  "devDependencies": {}
 }
