--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "abbrev": "^1.1.1",
-    "accepts": "^1.3.8",
-    "agent-base": "^6.0.2",
-    "ansi-regex": "^5.0.1",
-    "anymatch": "^3.1.3",
-    "aproba": "^2.0.0",
-    "are-we-there-yet": "^2.0.0",
-    "array-flatten": "^1.1.1",
-    "balanced-match": "^1.0.2",
+    "backend": "^0.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.3.0",
@@ -81,102 +73,8 @@
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
-    "jwa": "^1.4.1",
-    "jws": "^3.2.2",
-    "kareem": "^2.6.3",
-    "lodash.includes": "^4.3.0",
-    "lodash.isboolean": "^3.0.3",
-    "lodash.isinteger": "^4.0.4",
-    "lodash.isnumber": "^3.0.3",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.isstring": "^4.0.1",
-    "lodash.once": "^4.1.1",
-    "make-dir": "^3.1.0",
-    "math-intrinsics": "^1.1.0",
-    "media-typer": "^0.3.0",
-    "memory-pager": "^1.5.0",
-    "merge-descriptors": "^1.0.3",
-    "methods": "^1.1.2",
-    "mime": "^1.6.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "minimatch": "^3.1.2",
-    "minipass": "^5.0.0",
-    "minizlib": "^2.1.2",
-    "mkdirp": "^1.0.4",
-    "mongodb": "^6.13.0",
-    "mongodb-connection-string-url": "^3.0.2",
-    "mongoose": "^8.10.0",
-    "mpath": "^0.9.0",
-    "mquery": "^5.0.0",
-    "ms": "^2.0.0",
-    "mysql2": "^3.13.0",
-    "negotiator": "^0.6.3",
-    "node-addon-api": "^5.1.0",
-    "node-fetch": "^2.7.0",
-    "nodemon": "^3.1.9",
-    "nopt": "^5.0.0",
-    "normalize-path": "^3.0.0",
-    "npmlog": "^5.0.1",
-    "object-assign": "^4.1.1",
-    "object-inspect": "^1.13.3",
-    "on-finished": "^2.4.1",
-    "once": "^1.4.0",
-    "parseurl": "^1.3.3",
-    "path-is-absolute": "^1.0.1",
-    "path-to-regexp": "^0.1.12",
-    "picomatch": "^2.3.1",
-    "proxy-addr": "^2.0.7",
-    "pstree.remy": "^1.1.8",
-    "punycode": "^2.3.1",
-    "qs": "^6.13.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^2.5.2",
-    "readable-stream": "^3.6.2",
-    "readdirp": "^3.6.0",
-    "rimraf": "^3.0.2",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "semver": "^7.7.1",
-    "send": "^0.19.0",
-    "serve-static": "^1.16.2",
-    "set-blocking": "^2.0.0",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.1.0",
-    "side-channel-list": "^1.0.0",
-    "side-channel-map": "^1.0.1",
-    "side-channel-weakmap": "^1.0.2",
-    "sift": "^17.1.3",
-    "signal-exit": "^3.0.7",
-    "simple-update-notifier": "^2.0.0",
-    "sparse-bitfield": "^3.0.3",
-    "statuses": "^2.0.1",
-    "string_decoder": "^1.3.0",
-    "string-width": "^4.2.3",
-    "strip-ansi": "^6.0.1",
-    "supports-color": "^5.5.0",
-    "tar": "^6.2.1",
-    "to-regex-range": "^5.0.1",
-    "toidentifier": "^1.0.1",
-    "touch": "^3.1.1",
-    "tr46": "^5.0.0",
-    "type-is": "^1.6.18",
-    "undefsafe": "^2.0.5",
-    "unpipe": "^1.0.0",
-    "util-deprecate": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "vary": "^1.1.2",
-    "webidl-conversions": "^7.0.0",
-    "whatwg-url": "^14.1.0",
-    "wide-align": "^1.1.5",
-    "wrappy": "^1.0.2",
-    "yallist": "^4.0.0"
+    "mongoose": "^8.9.5",
+    "nodemon": "^3.1.9"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {}
 }
