--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "es-object-atoms": "^1.0.0",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "fill-range": "^7.1.1",
     "finalhandler": "^1.3.1",
