--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "etag": "^1.8.1",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "express-oas-generator": "^1.0.46",
     "fill-range": "^7.1.1",
     "finalhandler": "^1.3.1",
     "forwarded": "^0.2.0",
@@ -75,6 +76,8 @@
     "is-number": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
