--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "formik": "^2.4.6",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
