--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "frontend": "file:",
     "lucide-react": "^0.475.0",
