--- a/backend/package.json
+++ b/backend/package.json
@@ -76,6 +76,7 @@
     "is-number": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
