--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "backend": "file:",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.3.0",
@@ -16,7 +15,7 @@
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.1",
     "call-bound": "^1.0.3",
-    "chokidar": "^3.6.0",
+    "chokidar": "^3.5.3",
     "chownr": "^2.0.0",
     "color-support": "^1.1.3",
     "concat-map": "^0.0.1",
@@ -44,7 +43,6 @@
     "etag": "^1.8.1",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
-    "express-oas-generator": "^1.0.46",
     "fill-range": "^7.1.1",
     "finalhandler": "^1.3.1",
     "forwarded": "^0.2.0",
@@ -55,7 +53,7 @@
     "gauge": "^3.0.2",
     "get-intrinsic": "^1.2.7",
     "get-proto": "^1.0.1",
-    "glob": "^7.2.3",
+    "glob": "^10.3.10",
     "glob-parent": "^5.1.2",
     "gopd": "^1.2.0",
     "has-flag": "^3.0.0",
@@ -78,6 +76,7 @@
     "mongoose": "^8.9.5",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "rimraf": "^4.4.1",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   }
