--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-table": "^8.21.3",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "frontend": "file:",
@@ -21,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-table": "^7.8.0",
     "recharts": "^2.15.1",
     "router": "^1.3.8",
     "yup": "^1.6.1"
