--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^1.8.4",
     "backend": "file:",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
