--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^1.8.4",
     "backend": "file:",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -45,6 +46,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-oas-generator": "^1.0.46",
+    "fast-two-sms": "^1.0.4",
     "fill-range": "^7.1.1",
     "finalhandler": "^1.3.1",
     "forwarded": "^0.2.0",
@@ -76,16 +78,13 @@
     "is-number": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-
-    "nodemon": "^3.1.9",
+    "otp-generator": "^4.0.1",
     "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.5.2",
+    "xlsx": "^0.18.5",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -93,9 +92,9 @@
     "supertest": "^7.1.0"
   },
   "scripts": {
-  "test": "jest"
-},
-"jest": {
-  "testTimeout": 30000
-}
+    "test": "jest"
+  },
+  "jest": {
+    "testTimeout": 30000
+  }
 }
