--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "etag": "^1.8.1",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "fill-range": "^7.1.1",
     "finalhandler": "^1.3.1",
     "forwarded": "^0.2.0",
@@ -78,6 +79,8 @@
     "mongoose": "^8.9.5",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "rimraf": "^4.4.1",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
