--- a/backend/.env
+++ b/backend/.env
@@ -18,5 +18,8 @@ EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 CLOUDINARY_CLOUD_NAME=djarooa0l
 CLOUDINARY_API_KEY=787195123151781
 CLOUDINARY_API_SECRET=Z_iYcURHkeacMgHZS2AjxE0tON8
+# Reset password URL
+# FRONTEND_RESET_URL=
+CLIENT_BASE_URL=https://www.instagram.com/accounts/password/reset/
 
 PORT=5000
