--- a/frontend/.env
+++ b/frontend/.env
@@ -3,9 +3,11 @@ VITE_API_URL=http://localhost:5000/api
 
 # Endpoint paths
 VITE_LOGIN_ENDPOINT=/user/login
+VITE_LOGIN_WITH_GOOGLE=/user/google
 VITE_LOGIN_OTP =/user/otp/send
 VITE_LOGIN_OTP_VERIFY =/user/otp/verify
-VITE_REFRESH_TOKEN =/user//refresh_token
+VITE_FORGET_PASSWORD=/user/forgot_password
+VITE_REFRESH_TOKEN =/user/refresh_token
 VITE_GET_ALL_STUDENTS=/admission/students/getall
 VITE_GET_ADMITTED_STUDENTS=/admitted/students/getall
 VITE_GET_STUDENT_BY_ID=/admission/students/get/
