--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "frontend": "file:",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
