--- a/backend/.env
+++ b/backend/.env
@@ -16,5 +16,5 @@ EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 
 GOOGLE_CLIENT_ID=5651632301-vr7vclju2dmnl0cc3p1jl6b140ueqn54.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://localhost:5000/api/auth/google/callback
+GOOGLE_REDIRECT_URI=http://localhost:5173/
 PORT=5000
