--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "call-bound": "^1.0.3",
     "chokidar": "^3.5.3",
     "chownr": "^2.0.0",
+    "cloudinary": "^2.6.0",
     "color-support": "^1.1.3",
     "concat-map": "^0.0.1",
     "console-control-strings": "^1.1.0",
@@ -79,6 +80,8 @@
     "mongoose": "^8.9.5",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "qs": "^6.14.0",
     "rimraf": "^4.4.1",
     "swagger-ui-express": "^5.0.1",
