otp pages ready and admission flow all api calling complete

--- a/frontend/.env
+++ b/frontend/.env
@@ -12,5 +12,6 @@ VITE_REFRESH_TOKEN =/user/refresh_token
 VITE_GET_ALL_STUDENTS=/admission/students/getall
 VITE_GET_STUDENT_BY_ID=/admission/students/get/
 VITE_INTERVIEW_CREATE=/admission/students/create_interview/
+VITE_INTERVIEW_DETAIL=/admission/students/get_interviews/
 VITE_GET_ADMITTED_STUDENTS=/admitted/students/getall
 
