--- a/backend/package.json
+++ b/backend/package.json
@@ -83,6 +83,7 @@
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.1",
     "qs": "^6.14.0",
     "rimraf": "^4.4.1",
