--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "frontend": "file:",
+    "history": "^5.3.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
@@ -28,6 +29,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-table": "^7.8.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "router": "^2.2.0",
     "xlsx": "^0.18.5",
