--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,11 @@
 # Base API URL
 VITE_API_URL=http://localhost:5000/api
 
+
+GOOGLE_CLIENT_ID=5651632301-vr7vclju2dmnl0cc3p1jl6b140ueqn54.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:5173
+
 # Endpoint paths
 VITE_LOGIN_ENDPOINT=/user/login
 VITE_LOGIN_WITH_GOOGLE=/user/google
