--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-table": "^8.21.3",
     "crypto-js": "^4.2.0",
@@ -23,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-google-charts": "^5.2.1",
     "react-icons": "^5.4.0",
