--- a/frontend/.env
+++ b/frontend/.env
@@ -3,6 +3,7 @@ VITE_API_URL=http://localhost:5000/api
 
 # Endpoint paths
 VITE_LOGIN_ENDPOINT=/user/login
+VITE_LOGOUT_ENDPOINT=/user/logout
 VITE_LOGIN_WITH_GOOGLE=/user/google
 VITE_FORGET_PASSWORD=/user/forgot_password
 VITE_RESET_PASSWORD=/user/reset_password/
