files folder delete

--- a/frontend/.env
+++ b/frontend/.env
@@ -14,5 +14,6 @@ VITE_GET_ALL_STUDENTS=/admission/students/getall
 VITE_GET_STUDENT_BY_ID=/admission/students/get/
 VITE_INTERVIEW_CREATE=/admission/students/create_interview/
 VITE_INTERVIEW_DETAIL=/admission/students/get_interviews/
+# admission
 VITE_GET_ADMITTED_STUDENTS=/admitted/students/getall
-
+VITE_CREATE_LEVEL_INTERVIEW=/admitted/students/create_level/
