admission api calling

--- a/frontend/.env
+++ b/frontend/.env
@@ -2,6 +2,7 @@
 VITE_API_URL=http://localhost:5000/api
 
 # Endpoint paths
+# user
 VITE_LOGIN_ENDPOINT=/user/login
 VITE_LOGOUT_ENDPOINT=/user/logout
 VITE_LOGIN_WITH_GOOGLE=/user/google
@@ -10,6 +11,9 @@ VITE_RESET_PASSWORD=/user/reset_password/
 VITE_LOGIN_OTP =/user/otp/send
 VITE_LOGIN_OTP_VERIFY =/user/otp/verify
 VITE_REFRESH_TOKEN =/user/refresh_token
+VITE_UPDATE_USER_PROFILE=/user/update/
+
+# admission
 VITE_GET_ALL_STUDENTS=/admission/students/getall
 VITE_GET_STUDENT_BY_ID=/admission/students/get/
 VITE_INTERVIEW_CREATE=/admission/students/create_interview/
@@ -17,3 +21,9 @@ VITE_INTERVIEW_DETAIL=/admission/students/get_interviews/
 # admission
 VITE_GET_ADMITTED_STUDENTS=/admitted/students/getall
 VITE_CREATE_LEVEL_INTERVIEW=/admitted/students/create_level/
+VITE_UPDATE_PERMISSION_STUDENT=/admitted/students/update_permission_student/
+
+
+VITE_UPDATE_STUDENT_BY_ID=/admitted/students/webhook/update-admitted-student
+
+
