all get apis called

--- a/frontend/.env
+++ b/frontend/.env
@@ -17,3 +17,6 @@ VITE_INTERVIEW_DETAIL=/admission/students/get_interviews/
 # admission
 VITE_GET_ADMITTED_STUDENTS=/admitted/students/getall
 VITE_CREATE_LEVEL_INTERVIEW=/admitted/students/create_level/
+VITE_GET_LEVEL_INTERVIEW_BY_ID=/admitted/students/get_levels/
+VITE_GET_LEVEL_BY_NUMBER=/admitted/student/get_levels/
+VITE_GET_ADMITTED_STUDENTS_BY_ID=/admitted/students/
