Update Student Permissoin

--- a/frontend/.env
+++ b/frontend/.env
@@ -20,3 +20,4 @@ VITE_CREATE_LEVEL_INTERVIEW=/admitted/students/create_level/
 VITE_GET_LEVEL_INTERVIEW_BY_ID=/admitted/students/get_levels/
 VITE_GET_LEVEL_BY_NUMBER=/admitted/student/get_levels/
 VITE_GET_ADMITTED_STUDENTS_BY_ID=/admitted/students/
+VITE_GET_PERMISSION_STUDENT=/admitted/students/permission_students
