--- a/backend/.env
+++ b/backend/.env
@@ -15,6 +15,8 @@ EMAIL_PASS=bvrdrxsylujvfymt
 EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 LOGO=controllers/Ssism_Logo.png
 
+FRONTEND_BASE_URL=http://localhost:5173
+
 CLIENT_BASE_URL=https://password/reset/
 
 CLIENT_BASE_URL=http://localhost:5173/reset-password/
