all api of admitted students done

--- a/frontend/.env
+++ b/frontend/.env
@@ -18,14 +18,14 @@ VITE_GET_ALL_STUDENTS=/admission/students/getall
 VITE_GET_STUDENT_BY_ID=/admission/students/get/
 VITE_INTERVIEW_CREATE=/admission/students/create_interview/
 VITE_INTERVIEW_DETAIL=/admission/students/get_interviews/
-# admission
+
+# admitted students
 VITE_GET_ADMITTED_STUDENTS=/admitted/students/getall
+VITE_GET_ADMITTED_STUDENTS_BY_ID=/admitted/students/
 VITE_CREATE_LEVEL_INTERVIEW=/admitted/students/create_level/
+VITE_GET_LEVEL_INTERVIEW_BY_ID=/admitted/students/get_levels/
+VITE_GET_LEVEL_BY_NUMBER=/admitted/students/level/
+VITE_GET_PERMISSION_STUDENT=/admitted/students/permission_students
 VITE_UPDATE_PERMISSION_STUDENT=/admitted/students/update_permission_student/
 VITE_UPDATE_STUDENT_BY_ID=/admitted/students/webhook/update-admitted-student
 
-
-VITE_GET_LEVEL_INTERVIEW_BY_ID=/admitted/students/get_levels/
-VITE_GET_LEVEL_BY_NUMBER=/admitted/students/levels/
-VITE_GET_ADMITTED_STUDENTS_BY_ID=/admitted/students/
-VITE_GET_PERMISSION_STUDENT=/admitted/students/permission_students
