--- a/backend/package.json
+++ b/backend/package.json
@@ -79,6 +79,7 @@
     "is-number": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "multer": "^2.0.1",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
