--- a/frontend/.env
+++ b/frontend/.env
@@ -28,3 +28,6 @@ VITE_GET_LEVEL_BY_NUMBER=/admitted/students/level/
 VITE_GET_PERMISSION_STUDENT=/admitted/students/permission_students
 VITE_UPDATE_PERMISSION_STUDENT=/admitted/students/update_permission_student/
 VITE_UPDATE_PLACEMENT_INFO=/admitted/students/update-placement/
+
+# placement
+VITE_GET_READY_STUDENTS_FOR_PLACEMENT=/admitted/students/Ready_Students
