nilesh sir's changes

--- a/frontend/.env
+++ b/frontend/.env
@@ -31,3 +31,5 @@ VITE_UPDATE_PLACEMENT_INFO=/admitted/students/update-placement/
 
 # placement
 VITE_GET_READY_STUDENTS_FOR_PLACEMENT=/admitted/students/Ready_Students
+VITE_INTERVIEW_CREATE_PLACEMENT=/admitted/students/interviews/ 
+VITE_PLACEMENT_INFO_UPDATE=/admitted/students/update/interviews/
