--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # Base API URL
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://iteg-management-system-9zvf.onrender.com
 
 # Endpoint paths
 # user
