update .env file

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,7 @@
 # Base API URL
-BACKEND_URL=http://localhost:5000/api
+# BACKEND_URL=http://localhost:5000/api
 # VITE_API_URL=http://localhost:5000/api
-VITE_API_URL=https://iteg-management-system.onrender.com/api
+VITE_API_URL=https://iteg-management-system-9zvf.onrender.com/api
 # Endpoint paths
 # user
 VITE_LOGIN_ENDPOINT=/user/login
