--- a/backend/.env
+++ b/backend/.env
@@ -15,7 +15,7 @@ EMAIL_PASS=bvrdrxsylujvfymt
 EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 LOGO=controllers/Ssism_Logo.png
 
-FRONTEND_BASE_URL=http://localhost:5173
+FRONTEND_BASE_URL=https://iteg-management-system.vercel.app/
 
 CLIENT_BASE_URL=https://password/reset/
 
