--- a/backend/.env
+++ b/backend/.env
@@ -15,11 +15,13 @@ EMAIL_PASS=bvrdrxsylujvfymt
 EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 LOGO=controllers/Ssism_Logo.png
 
-FRONTEND_BASE_URL=https://iteg-management-system.vercel.app/
+FRONTEND_URL=https://iteg-management-system.vercel.app/
 
-CLIENT_BASE_URL=https://password/reset/
+# CLIENT_BASE_URL=https://password/reset/
 
-CLIENT_BASE_URL=http://localhost:5173/reset-password/
+# CLIENT_BASE_URL=http://localhost:5173/reset-password/
+CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http://localhost:5173/reset-password/
+
 
 GOOGLE_CALLBACK_URL=http://localhost:5000/api/user/google/callback
 GOOGLE_CLIENT_ID=5651632301-vr7vclju2dmnl0cc3p1jl6b140ueqn54.apps.googleusercontent.com
