update login url redirect

--- a/backend/.env
+++ b/backend/.env
@@ -15,7 +15,7 @@ EMAIL_PASS=bvrdrxsylujvfymt
 EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 LOGO=controllers/Ssism_Logo.png
 
-FRONTEND_URL=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app
+FRONTEND_URL=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000
 
 # CLIENT_BASE_URL=https://password/reset/
 
