--- a/backend/.env
+++ b/backend/.env
@@ -26,5 +26,5 @@ CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http:/
 GOOGLE_CALLBACK_URL=http://localhost:5000/api/user/google/callback
 GOOGLE_CLIENT_ID=5651632301-vr7vclju2dmnl0cc3p1jl6b140ueqn54.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://localhost:5173/google-success/
+GOOGLE_REDIRECT_URI=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000
 PORT=5000
