--- a/backend/.env
+++ b/backend/.env
@@ -15,12 +15,12 @@ EMAIL_PASS=bvrdrxsylujvfymt
 EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 LOGO=controllers/Ssism_Logo.png
 
-FRONTEND_URL=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000
+FRONTEND_URL=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000,iteg.ssism.org,
 
 # CLIENT_BASE_URL=https://password/reset/
 
 # CLIENT_BASE_URL=http://localhost:5173/reset-password/
-CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http://localhost:5173/reset-password/
+CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http://localhost:5173/reset-password/,iteg.ssism.org
 
 
 GOOGLE_CALLBACK_URL=http://localhost:5000/api/user/google/callback
