Add new college doamin

--- a/backend/.env
+++ b/backend/.env
@@ -15,16 +15,16 @@ EMAIL_PASS=bvrdrxsylujvfymt
 EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 LOGO=controllers/Ssism_Logo.png
 
-FRONTEND_URL=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000,iteg.ssism.org,
+FRONTEND_URL=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000,http://iteg.ssism.org
 
 # CLIENT_BASE_URL=https://password/reset/
 
 # CLIENT_BASE_URL=http://localhost:5173/reset-password/
-CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http://localhost:5173/reset-password/,iteg.ssism.org
+CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http://localhost:5173/reset-password/,http://iteg.ssism.org
 
 
 GOOGLE_CALLBACK_URL=http://localhost:5000/api/user/google/callback
 GOOGLE_CLIENT_ID=5651632301-vr7vclju2dmnl0cc3p1jl6b140ueqn54.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000
+GOOGLE_REDIRECT_URI=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000http://iteg.ssism.org
 PORT=5000
