login with google code add in .env file

--- a/backend/.env
+++ b/backend/.env
@@ -23,8 +23,8 @@ FRONTEND_URL=https://iteg.ssism.org,https://iteg-management-system.vercel.app,ht
 CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http://localhost:5173/reset-password/,https://iteg.ssism.org
 
 
-GOOGLE_CALLBACK_URL=http://localhost:5000/api/user/google/callback
-GOOGLE_CLIENT_ID=5651632301-vr7vclju2dmnl0cc3p1jl6b140ueqn54.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000,https://iteg.ssism.org
+GOOGLE_CALLBACK_URL=https://iteg.ssism.org/api/user/google/callback
+GOOGLE_CLIENT_ID=5651632301-j6bh6ju2uau0pb6m2lkft14qjvu52brn.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=https://iteg.ssism.org
 PORT=5000
