--- a/backend/.env
+++ b/backend/.env
@@ -22,4 +22,11 @@ CLIENT_BASE_URL=http://localhost:5173/reset-password/
 GOOGLE_CLIENT_ID=5651632301-vr7vclju2dmnl0cc3p1jl6b140ueqn54.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://localhost:5173/google-success/
+
+
+CLOUDINARY_CLOUD_NAME=djarooa0l
+CLOUDINARY_API_KEY=787195123151781
+CLOUDINARY_API_SECRET=Z_iYcURHkeacMgHZS2AjxE0tON8
+
+
 PORT=5000
