--- a/backend/.env
+++ b/backend/.env
@@ -21,7 +21,7 @@ CLIENT_BASE_URL=http://localhost:5173/reset-password/
 
 GOOGLE_CLIENT_ID=5651632301-vr7vclju2dmnl0cc3p1jl6b140ueqn54.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://localhost:5173/google-success/
+GOOGLE_REDIRECT_URI=https://iteg.ssism.org/google-success
 
 
 CLOUDINARY_CLOUD_NAME=djarooa0l
