login with google redirect url changed

--- a/backend/.env
+++ b/backend/.env
@@ -26,5 +26,5 @@ CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http:/
 GOOGLE_CALLBACK_URL=https://iteg.ssism.org/api/user/google/callback
 GOOGLE_CLIENT_ID=5651632301-j6bh6ju2uau0pb6m2lkft14qjvu52brn.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=https://iteg.ssism.org
+GOOGLE_REDIRECT_URI=https://iteg.ssism.org/google-success
 PORT=5000
