Frontend URL change in .env file

--- a/backend/.env
+++ b/backend/.env
@@ -49,12 +49,12 @@ EMAIL_PASS=bvrdrxsylujvfymt
 EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 LOGO=controllers/Ssism_Logo.png
 
-FRONTEND_URL=https://iteg.ssism.org,https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000,http://iteg.ssism.org
+FRONTEND_URL=https://iteg-management-system-nth9.vercel.app
 
 # CLIENT_BASE_URL=https://password/reset/
 
 # CLIENT_BASE_URL=http://localhost:5173/reset-password/
-CLIENT_BASE_URL=https://iteg-management-system.vercel.app/reset-password/,http://localhost:5173/reset-password/,https://iteg.ssism.org
+CLIENT_BASE_URL=https://iteg-management-system-nth9.vercel.app/reset-password/,http://localhost:5173/reset-password/,https://iteg-management-system-nth9.vercel.app
 
 
 GOOGLE_CALLBACK_URL=https://iteg.ssism.org/api/user/google/callback
