--- a/backend/package.json
+++ b/backend/package.json
@@ -88,6 +88,7 @@
     "pdfkit": "^0.17.1",
     "qs": "^6.14.0",
     "rimraf": "^4.4.1",
+    "sharp": "^0.34.2",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.5.2",
     "yamljs": "^0.3.0"
