--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-table": "^8.21.3",
     "browser-image-compression": "^2.0.2",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "frontend": "file:",
     "history": "^5.3.0",
@@ -24,6 +25,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-google-charts": "^5.2.1",
     "react-icons": "^5.4.0",
