Technical interview form  work

--- a/frontend/.env
+++ b/frontend/.env
@@ -18,6 +18,7 @@ VITE_GET_ALL_STUDENTS=/admission/students/getall
 VITE_GET_STUDENT_BY_ID=/admission/students/get/
 VITE_INTERVIEW_CREATE=/admission/students/create_interview/
 VITE_INTERVIEW_DETAIL=/admission/students/get_interviews/
+# VITE_GET_INTERVIEW_ATTEMPT=/
 
 # admitted students
 VITE_GET_ADMITTED_STUDENTS=/admitted/students/getall
