--- a/frontend/.env
+++ b/frontend/.env
@@ -33,3 +33,5 @@ VITE_UPDATE_PLACEMENT_INFO=/admitted/students/update-placement/
 VITE_GET_READY_STUDENTS_FOR_PLACEMENT=/admitted/students/Ready_Students
 VITE_INTERVIEW_CREATE_PLACEMENT=/admitted/students/interviews/ 
 VITE_PLACEMENT_INFO_UPDATE=/admitted/students/update/interviews/
+VITE_PLACEMENT_RESUME_UPLOAD= /admitted/students/upload_Resume_Base64
+ 
