Login With Google functionality now work properly

--- a/backend/.env
+++ b/backend/.env
@@ -57,8 +57,14 @@ FRONTEND_URL=https://iteg-management-system-nth9.vercel.app,http://localhost:517
 CLIENT_BASE_URL=https://iteg-management-system-nth9.vercel.app/reset-password/,http://localhost:5173/reset-password/,https://iteg-management-system-nth9.vercel.app
 
 
-GOOGLE_CALLBACK_URL=https://iteg.ssism.org/api/user/google/callback
+# Development Google OAuth Settings
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/user/google/callback
 GOOGLE_CLIENT_ID=5651632301-j6bh6ju2uau0pb6m2lkft14qjvu52brn.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=https://iteg.ssism.org/google-success
+GOOGLE_REDIRECT_URI=http://localhost:5173/google-success
+
+# Production Google OAuth Settings (uncomment for production)
+# GOOGLE_CALLBACK_URL=https://iteg.ssism.org/api/user/google/callback
+# GOOGLE_REDIRECT_URI=https://iteg.ssism.org/google-success
+
 PORT=5000
