--- a/backend/.env
+++ b/backend/.env
@@ -63,6 +63,10 @@ GOOGLE_CLIENT_ID=5651632301-j6bh6ju2uau0pb6m2lkft14qjvu52brn.apps.googleusercont
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://localhost:5173/google-success
 
+CLOUDINARY_CLOUD_NAME=djarooa0l
+CLOUDINARY_API_KEY=787195123151781
+CLOUDINARY_API_SECRET=Z_iYcURHkeacMgHZS2AjxE0tON8
+
 # Production Google OAuth Settings (uncomment for production)
 # GOOGLE_CALLBACK_URL=https://iteg.ssism.org/api/user/google/callback
 # GOOGLE_REDIRECT_URI=https://iteg.ssism.org/google-success
