upload resume fix

--- a/backend/.env
+++ b/backend/.env
@@ -24,9 +24,9 @@
 # GOOGLE_REDIRECT_URI=http://localhost:5173/google-success/
 
 
-# CLOUDINARY_CLOUD_NAME=djarooa0l
-# CLOUDINARY_API_KEY=787195123151781
-# CLOUDINARY_API_SECRET=Z_iYcURHkeacMgHZS2AjxE0tON8
+CLOUDINARY_CLOUD_NAME=djarooa0l
+CLOUDINARY_API_KEY=787195123151781
+CLOUDINARY_API_SECRET=Z_iYcURHkeacMgHZS2AjxE0tON8
 
 
 # PORT=5000
