Studnet profile API intriget some changes

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,10 @@
 # Base API URL
-# VITE_API_URL=https://iteg-backend-demo.onrender.com/api
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://iteg-backend-demo.onrender.com/api
+# VITE_API_URL=http://localhost:5000/api
 # VITE_API_URL=https://iteg.ssism.org/api
+
+# Center API URL (for attendance)
+VITE_CENTRAL_API=http://localhost:5000
 # Endpoint paths
 # user
 VITE_LOGIN_ENDPOINT=/user/login
@@ -40,6 +43,9 @@ VITE_GET_INTERVIEW_ATTEMPT_count=/admitted/students/counts/
 
 # remaning
 VITE_RESUME_UPLOAD=/admitted/students/upload_Resume_Base64
+
+# attendance
+VITE_GET_STUDENT_ATTENDANCE=/attendance/student/
 
 
 # VITE_INTERVIEW_CREATE_PLACEMENT     /////Done
