add faculty work done

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,6 +4,7 @@ VITE_API_URL=http://localhost:5000/api
 # VITE_API_URL=https://iteg.ssism.org/api
 # Endpoint paths
 # user
+VITE_SIGNUP_ENDPOINT=/user/signup
 VITE_LOGIN_ENDPOINT=/user/login
 VITE_LOGOUT_ENDPOINT=/user/logout
 VITE_LOGIN_WITH_GOOGLE=/user/google
