--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.1",
     "call-bound": "^1.0.3",
+    "canvas": "^3.2.0",
     "chokidar": "^3.5.3",
     "chownr": "^2.0.0",
     "cloudinary": "^2.6.0",
@@ -47,6 +48,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "face-api.js": "^0.22.2",
     "fill-range": "^7.1.1",
     "finalhandler": "^1.3.1",
     "forwarded": "^0.2.0",
