--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "browser-image-compression": "^2.0.2",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "face-api.js": "^0.22.2",
     "formik": "^2.4.6",
     "frontend": "file:",
     "history": "^5.3.0",
