--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,48 +11,49 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.3",
-    "@reduxjs/toolkit": "^2.6.1",
+    "@headlessui/react": "^2.2.7",
+    "@reduxjs/toolkit": "^2.8.2",
     "browser-image-compression": "^2.0.2",
     "crypto-js": "^4.2.0",
-    "face-api.js": "^0.20.0",
+    "face-api.js": "^0.22.2",
     "formik": "^2.4.6",
-    "jspdf": "^3.0.1",
+    "glob": "^11.0.3",
+    "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
-    "lucide-react": "^0.475.0",
-    "react": "^18.3.1",
-    "react-datepicker": "^8.4.0",
-    "react-dom": "^18.3.1",
+    "lucide-react": "^0.542.0",
+    "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
+    "react-dom": "^19.1.1",
     "react-google-charts": "^5.2.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.15.1",
+    "recharts": "^3.1.2",
     "xlsx": "^0.18.5",
-    "yup": "^1.6.1"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@eslint/js": "^9.34.0",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.4.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "jest": "^29.7.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
+    "@vitejs/plugin-react": "^5.0.1",
+    "@vitejs/plugin-react-swc": "^4.0.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.34.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "jest": "^30.1.0",
     "jsdom": "^26.1.0",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.6",
     "redux-mock-store": "^1.5.5",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5",
-    "vite-plugin-static-copy": "^2.3.1",
-    "vitest": "^3.1.1"
+    "tailwindcss": "^4.1.12",
+    "vite": "^7.1.3",
+    "vite-plugin-static-copy": "^3.1.2",
+    "vitest": "^3.2.4"
   }
 }
