--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "frontend": "file:",
     "history": "^5.3.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
