--- a/frontend/.env
+++ b/frontend/.env
@@ -44,7 +44,7 @@ VITE_RESUME_UPLOAD=/admitted/students/upload_Resume_Base64
 
 
 # iteg attendance
-VITE_ITEG_ATTENDANCE_API_URL=http://4.224.28.98:3026/api
+VITE_ITEG_ATTENDANCE_API_URL=https://qa-api.ssism.org/api
 VITE_ITEG_ATTENDANCE_ENDPOINT=/iteg-attendance
 VITE_ITEG_ATTENDANCE_STUDENTS_ENDPOINT=/iteg-attendance
 VITE_ITEG_ATTENDANCE_API_KEY=iteg-attendance-api-key-2024
