--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 # Base API URL
-# VITE_API_URL=https://iteg-backend-demo.onrender.com/api
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://iteg-backend-demo.onrender.com/api
+# VITE_API_URL=http://localhost:5000/api
 # VITE_API_URL=https://iteg.ssism.org/api
 # Endpoint paths
 # user
