update some file

--- a/backend/.env
+++ b/backend/.env
@@ -53,7 +53,8 @@ EMAIL_PASS=bvrdrxsylujvfymt
 EMAIL_LOGO_PATH=helpers/Ssism_Logo.png
 LOGO=controllers/Ssism_Logo.png
 
-FRONTEND_URL=https://iteg.ssism.org,https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000,http://iteg.ssism.org
+FRONTEND_URL=https://iteg.ssism.org/api
+# FRONTEND_URL=https://iteg.ssism.org,https://iteg-management-system.vercel.app,https://iteg-management-system-git-main-keshav-vishwakarmas-projects.vercel.app,https://iteg-management-system-hkidd8lmy-keshav-vishwakarmas-projects.vercel.app,http://localhost:5000,http://iteg.ssism.org
 
 # CLIENT_BASE_URL=https://password/reset/
 
