--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Frontend Dockerfile
-FROM node:18 as build
+FROM node:18 AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
@@ -8,6 +8,6 @@ RUN npm run build
 
 # serve with nginx
 FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 5002
 CMD ["nginx", "-g", "daemon off;"]
