update url .env file

--- a/frontend/.env
+++ b/frontend/.env
@@ -5,7 +5,7 @@ VITE_API_URL=https://iteg.ssism.org/api
 
 
 # iteg attendance
-VITE_ITEG_ATTENDANCE_API_URL=https://qa-api.ssism.org/api
+VITE_ITEG_ATTENDANCE_API_URL=https://api.ssism.org/api
 
 
 VITE_ITEG_ATTENDANCE_ENDPOINT=/iteg-attendance
