--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
+    "@react-pdf/renderer": "^4.3.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-table": "^8.21.3",
     "browser-image-compression": "^2.0.2",
@@ -31,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-google-charts": "^5.2.1",
     "react-icons": "^5.4.0",
+    "react-pdf": "^10.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-table": "^7.8.0",
