--- a/backend/package.json
+++ b/backend/package.json
@@ -83,7 +83,6 @@
     "mongoose": "^8.9.5",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.10",
-    "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdf-lib": "^1.17.1",
@@ -98,9 +97,12 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
+    "nodemon": "^3.1.11",
     "supertest": "^7.1.0"
   },
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest"
   }
 }
