forget password now working properly

--- a/frontend/.env
+++ b/frontend/.env
@@ -18,7 +18,7 @@ VITE_ITEG_ATTENDANCE_API_KEY=iteg-attendance-api-key-2024
 # VITE_SIGNUP_ENDPOINT=/user/signup
 # VITE_LOGIN_ENDPOINT=/user/login
 # VITE_LOGOUT_ENDPOINT=/user/logout
-# VITE_LOGIN_WITH_GOOGLE=/user/google
+VITE_LOGIN_WITH_GOOGLE=/user/google
 # VITE_FORGET_PASSWORD=/user/forgot_password
 # VITE_RESET_PASSWORD=/user/reset_password/
 # VITE_LOGIN_OTP =/user/otp/send
